fix all overflow tables

--- a/client/index.css
+++ b/client/index.css
@@ -1,3 +1,8 @@
 #root{
-    color: rgb(21, 8, 196)
+    color: rgb(21, 8, 196);
+    overflow-y: hidden;
+}
+
+body{
+    overflow: hidden;
 }
